k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eiwyg
  labels:
    app: eiwyg
spec:
  selector:
    app: eiwyg
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
